<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sesion05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="log">Log int Redbooth</string>
    <string name="email">Email or Username</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign in with\nGoogle</string>
    <string name="on_premise">On-Premise\nLogin</string>

</resources>
